[gd_scene load_steps=8 format=3 uid="uid://da38k6qxd7rgt"]

[ext_resource type="Script" uid="uid://dvomkvw4wp0b2" path="res://scripts/start_game_menu.gd" id="1_3leiu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hcth"]
resource_local_to_scene = true
bg_color = Color(0.682353, 0.682353, 0.682353, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwd2r"]
resource_local_to_scene = true
bg_color = Color(0.435294, 0.435294, 0.435294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kchg"]
resource_local_to_scene = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wg28"]
resource_local_to_scene = true
bg_color = Color(0.683077, 0.683077, 0.683077, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3leiu"]
resource_local_to_scene = true
bg_color = Color(0.435192, 0.435192, 0.435192, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66g3x"]
resource_local_to_scene = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="StartGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3leiu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -22.5
offset_right = 32.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Grid size"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridSizeOptionButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_0hcth")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hwd2r")
theme_override_styles/normal = SubResource("StyleBoxFlat_1kchg")
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Target number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetNumberOptionButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_0hcth")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hwd2r")
theme_override_styles/normal = SubResource("StyleBoxFlat_1kchg")
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8wg28")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3leiu")
theme_override_styles/normal = SubResource("StyleBoxFlat_66g3x")
text = "Play"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
